<resources>
    <string name="app_name">Notatnik</string>
    <string name="title_underline">Title underline</string>
    <string name="edit_content_here">Edit content here…</string>
    <string name="edit_title_here">Edit title here…</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="create_new">Create new</string>
    <string name="saved">Saved!</string>
    <string name="deleted">Deleted!</string>
    <string name="created">Created!</string>
    <string name="test" translatable="false">test</string>
    <string name="updated">Updated!</string>
    <string name="note_list">Note list</string>
    <string name="long_click_to_edit_note">Long click to edit note</string>
    <string name="nothing_to_delete">Nothing to delete!</string>
</resources>