<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_create_new"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="0"
        android:title="@string/create_new"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        android:orderInCategory="0"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:orderInCategory="0" />
    <item
        android:id="@+id/action_test"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:orderInCategory="0" />
</menu>