<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteEditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_title_here"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/test"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/content_text"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/title_underline"
        android:scaleType="fitXY"
        android:src="@drawable/line_bar"
        app:layout_constraintBottom_toTopOf="@+id/content_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/edit_content_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>